--- a/dmp.qmd
+++ b/dmp.qmd
@@ -1,5 +1,21 @@
-# Data Management Plan (DMP) {.unnumbered}
+---
+abstract: |
+  This chapter explains how to use this guide effectively and provides tips for search, browse and navigation.
+abstract-title: Summary
+---
 
+# Data Management Plan (DMP) {.unnumbered #sec-dmp}
+
+::: {.callout-warning icon=false}
+
+## Learning outcomes
+
+  - What is a Data Management Plan (DMP) and how it is structured
+  - How to prepare the core section of a DMP
+
+:::
+
+## What is a Data Management Plan
 ::: {.callout-note icon=false appearance="simple"}
 
 _A **Data Management Plan (DMP)** is a formal document that outlines how data will be handled during and after a research project._
@@ -17,31 +33,23 @@ Data Management Plans (DMPs) are documents normally required by research funders
 - How data is preserved
 - How, whether and under what terms, research data outputs can be shared
 
-
-::: {.callout-tip}
-Preparing a DMP at the beginning of a research endeavour is an important step in making sure that data are properly managed and curated, prepared for possible [sharing and reuse](links), and in ensuring [transparency and reproducibility](link) of research. Early-stage researchers (like EUI PhD Researchers) are strongly invited to learn how to prepare a DMP, as they will be required when applying for future project funding.
-:::
-
-## Preparing a Data Management Plan (DMP)]
-
 Every DMP is a unique document, grounded in the individual research project and it is the responsibility of the Principal Investigator (PI), or delegated person (e.g. the project manager, or member of the research team) to write and deliver a comprehensive, accurate and original data management plan.
 
-The FAIR data principles - to make data findable, accessible, interoperable and reusable - must be considered during the preparation and revision of data management plans. Detailed information about these four principles is available in the grid below.
-
-The following supporting materials should be consulted during the preparation of EUI DMPs:
-
-- [EUI Code of Ethics](https://www.eui.eu/ServicesAndAdmin/DeanOfStudies/Ethics-and-Integrity-in-Academic-Research)
-- [**EUI 'Guide to Good Data Protection Practice in Research**](https://www.eui.eu/documents/servicesadmin/deanofstudies/researchethics/guide-data-protection-research.pdf)
-- [**EUI Guidelines on Ethics and Integrity in Academic Research**](https://www.eui.eu/ServicesAndAdmin/DeanOfStudies/Ethics-and-Integrity-in-Academic-Research)
-- [**EUI Library Research Data Guide**](/) (this guide) 
-
-Scholars preparing a data management plan for funded projects should also carefully follow the instructions provided by the relevant science programme office (eg. **Horizon Europe**, **European Research Council** etc.). Where a DMP template is provided, this must be used, for example: 
-
-- [Horizon Europe DMP template](https://ec.europa.eu/info/funding-tenders/opportunities/docs/2021-2027/horizon/temp-form/report/data-management-plan_he_en.docx) in the [Horizon Europe Work Programme](https://ec.europa.eu/info/funding-tenders/opportunities/docs/2021-2027/horizon/guidance/programme-guide_horizon_en.pdf)
-- [ERC DMP template](https://erc.europa.eu/sites/default/files/document/file/ERC-Data-Management-Plan.docx) in the [ERC Work Programme](https://ec.europa.eu/info/funding-tenders/opportunities/docs/2021-2027/horizon/wp-call/2022/wp_horizon-erc-2022_en.pdf).
-
 **It is important to update DMPs throughout the research project**, incorporating new information about data collection,
-data generation, methodologies and relevant changes to the composition of the research team or consortium (for intenrational collaborative projects).
+data generation, methodologies and relevant changes to the composition of the research team or consortium (for intenrnational collaborative projects).
+
+
+::: {.callout-tip}
+
+Preparing a DMP at the beginning of a research endeavour is an important step in making sure that data are properly managed and curated, prepared for possible [sharing and reuse](links), and in ensuring [transparency and reproducibility](link) of research. Early-stage researchers (like EUI PhD Researchers) are strongly invited to learn how to prepare a DMP, as they will be required when applying for future project funding.
+
+:::
+
+
+
+
+
+
 
 ::: {.callout-tip}
 
@@ -50,6 +58,10 @@ The EUI Library can provide feedback and guidance. Please, reach out to the [Res
 :::
 
 ## Common elements of a DMP
+
+
+The FAIR data principles - to make data findable, accessible, interoperable and reusable - must be considered during the preparation and revision of data management plans. Detailed information about these four principles is available in the grid below.
+
 When preparing a DMP scholars can follow these prompts to address all core aspects:
 
 ::: {.callout-note icon=false appearance="simple"}
@@ -183,6 +195,15 @@ Here following a few elements that **Principal Investigators** and **Project Man
 -   Note any data embargo period, where applicable.                  
 
 :::
+
+## EUI supporting documents
+
+The following supporting materials should be consulted during the preparation of EUI DMPs:
+
+- [**EUI Code of Ethics**](https://www.eui.eu/ServicesAndAdmin/DeanOfStudies/Ethics-and-Integrity-in-Academic-Research)
+- [**EUI 'Guide to Good Data Protection Practice in Research**](https://www.eui.eu/documents/servicesadmin/deanofstudies/researchethics/guide-data-protection-research.pdf)
+- [**EUI Guidelines on Ethics and Integrity in Academic Research**](https://www.eui.eu/ServicesAndAdmin/DeanOfStudies/Ethics-and-Integrity-in-Academic-Research)
+- [**EUI Library Research Data Guide**](index.qmd) (this guide)
 
 ## Data management planning tools
 
